--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.3",
+    "cookie-parser": "^1.4.7",
     "ejs": "^3.1.10",
     "express": "^4.21.1",
+    "express-session": "^1.18.1",
     "mongoose": "^8.7.3",
     "nodemon": "^3.1.7"
   }
